--- a/PeliculasApp/package.json
+++ b/PeliculasApp/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
+    "currency-formatter": "^1.5.9",
     "deprecated-react-native-prop-types": "^2.2.0",
     "react": "18.1.0",
     "react-native": "0.70.10",
@@ -28,6 +29,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
+    "@types/currency-formatter": "^1.5.2",
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
