--- a/Pokedex/package.json
+++ b/Pokedex/package.json
@@ -13,6 +13,7 @@
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.5.0",
     "react": "18.1.0",
     "react-native": "0.70.10",
     "react-native-gesture-handler": "^2.8.0",
