--- a/Pokedex/android/build.gradle
+++ b/Pokedex/android/build.gradle
@@ -1,4 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+project.ext.vectoricons = [
+    iconFontNames: [ 'Ionicons.ttf' ] // Name of the font files you want to copy
+]
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle");
 
 buildscript {
     ext {
